--- a/css/creative.css
+++ b/css/creative.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans',Arial,sans-serif
 }
 hr {
   border-color: #F05F40;
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Open Sans",Arial,sans-serif
 }
 p {
   font-size: 16px;
