--- a/css/perso.css
+++ b/css/perso.css
@@ -6,7 +6,9 @@ body {
   padding-bottom: 40px;
   color: #5a5a5a;
 }
-
+.title {
+  color: #0056bb;
+}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
